# os1000

./: .gitignore  CMakeLists.txt  common.c  common.h  kernel.c  kernel.h  kernel.ld  main.c  riscv32-toolchain.cmake  run.sh  shell.c  user.c  user.h
cmake/: function.cmake
kernel/: kernel.c  kernel.h
ld/: kernel.ld  user.ld
shell/: shell.c
stdlib/: common.c  common.h
user/: user.c  user.h
user_scripts/shell/: shell.c
